# nextgen

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.default  nextgen.toml.default
example/: nextgen.toml
example/blueprints/default/macros/: macros.html
example/blueprints/default/templates/: base.html  blog_index.html  blog_page.html  footer.html  header.html  index.html  news_index.html  news_page.html  page.html  rss_page.html
example/content/: _index.md  about.md
example/content/blog/: _index.md
example/content/blog/2023/: hello-world.md
example/content/blog/2025/: example.md
example/content/news/: _index.md
example/content/news/2025/: no_news.md
src/: main.rs
