[package]
name = "nextgen"
version = "0.2.0"
authors = ["Florian Anderiasch <fa@art-core.org>"]
edition = "2018"

[dependencies]
chrono = "0.4.38"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"

[dependencies.tera]
version = "1.19.1"
default-features = false
